update to angular 13.0

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <script src="https://kit.fontawesome.com/18eb998ea9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="app"></app-root>
 </body>
 </html>
